--- a/iMarket/Base.lproj/Main.storyboard
+++ b/iMarket/Base.lproj/Main.storyboard
@@ -266,7 +266,7 @@
                                 </items>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Poi-92-Bjh">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="488"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemNewCell" textLabel="Qr7-6a-wmI" style="IBUITableViewCellStyleDefault" id="NpH-g0-LpS">
@@ -290,11 +290,36 @@
                                     <outlet property="delegate" destination="DRW-eB-wSc" id="fcR-Zv-VgK"/>
                                 </connections>
                             </tableView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ASJ-hG-HJ9">
+                                <rect key="frame" x="16" y="560" width="497" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="PPA-0I-FDI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="trS-XH-y2n">
+                                <rect key="frame" x="521" y="560" width="63" height="30"/>
+                                <state key="normal" title="Add Item">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="addItem:" destination="DRW-eB-wSc" eventType="touchUpInside" id="gut-8q-Imm"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="trS-XH-y2n" firstAttribute="leading" secondItem="ASJ-hG-HJ9" secondAttribute="trailing" constant="8" id="8lG-op-FqN"/>
+                            <constraint firstItem="trS-XH-y2n" firstAttribute="trailing" secondItem="wXD-bF-olQ" secondAttribute="trailingMargin" id="CUs-eU-Fr1"/>
+                            <constraint firstItem="rbM-DP-j4q" firstAttribute="top" secondItem="ASJ-hG-HJ9" secondAttribute="bottom" constant="10" id="Cs6-Hr-GOn"/>
+                            <constraint firstItem="rbM-DP-j4q" firstAttribute="top" secondItem="trS-XH-y2n" secondAttribute="bottom" constant="10" id="nQC-d4-vAT"/>
+                            <constraint firstItem="ASJ-hG-HJ9" firstAttribute="leading" secondItem="wXD-bF-olQ" secondAttribute="leadingMargin" id="vPd-VY-dLE"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="Poi-92-Bjh" id="hRm-r4-y76"/>
+                        <outlet property="txtNewItem" destination="ASJ-hG-HJ9" id="8be-jz-98U"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Wz-3G-hYh" userLabel="First Responder" sceneMemberID="firstResponder"/>
